<resources>
    <string name="app_name">FFmpegCommand</string>
    <string name="str_transform_audio">音频转码</string>
    <string name="str_transform_video">视频转码</string>
    <string name="str_cut_audio">音频剪切</string>
    <string name="str_cut_video">视频剪切</string>
    <string name="str_concat_audio">音频拼接</string>
    <string name="str_concat_video">视频拼接</string>
    <string name="str_reduce_audio">音频降音</string>
    <string name="str_extract_audio">抽取音频</string>
    <string name="str_extract_video">抽取视频</string>
    <string name="str_mix_audio_video">音视频合成</string>
    <string name="str_shot_video">获取第一帧</string>
    <string name="str_video2jpeg">视频转图片</string>
    <string name="str_video2gif">视频转gif</string>
    <string name="str_add_water">添加水印</string>
    <string name="str_screen_record">屏幕录制</string>
    <string name="str_image2Video">图片转视频</string>
    <string name="str_extract_pcm">音频解码PCM</string>
    <string name="str_encode_audio">音频编码</string>
    <string name="str_multi_video">多画面拼接</string>
    <string name="str_reverse_video">反序播放</string>
    <string name="str_pic_in_pic">画中画</string>
    <string name="str_mix_audio">混音</string>
    <string name="str_video_double_down">视频缩小一倍</string>
    <string name="str_video_speed2">倍速播放</string>
    <string name="str_denoise_video">视频降噪</string>
    <string name="str_extract_yuv">视频解码YUV</string>
    <string name="str_extract_h264">抽取视频H264</string>
    <string name="str_yuv_h264">视频编码H264</string>
    <string name="str_audio_fade_in">音频淡入</string>
    <string name="str_audio_fade_out">音频淡出</string>
    <string name="str_video_bright">视频亮度</string>
    <string name="str_video_contrast">视频对比度</string>
    <string name="str_video_rotation">视频旋转</string>
    <string name="str_output_dir">输出目录:</string>
    <string name="str_output_result">输出:</string>
    <string name="src_video_scale">视频缩放</string>

    <string name="str_more_command">同步多命令行\n单独执行</string>
    <string name="str_more_command2">同步多命令行\n合并执行</string>
    <string name="str_more_command3">异步多命令行\n合并执行</string>
    <string name="str_more_command4">多进程执行</string>

    <string name="str_input_format">输入格式</string>
    <string name="str_output_format">输入格式</string>
</resources>
