<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_transform_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_transform_audio" />

        <Button
            android:id="@+id/btn_transform_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_transform_video" />

        <Button
            android:id="@+id/btn_cut_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_cut_audio" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_cut_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_cut_video" />

        <Button
            android:id="@+id/btn_concat_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_concat_audio" />

        <Button
            android:id="@+id/btn_concat_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_concat_video" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_reduce_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_reduce_audio" />
    </LinearLayout>

</LinearLayout>