<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_more_command3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/shape_button_border"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/str_more_command3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_more_command"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/shape_button_border"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/str_more_command" />

            <Button
                android:id="@+id/btn_more_command2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/shape_button_border"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/str_more_command2" />

        </LinearLayout>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:minHeight="80dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_output_result"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>